fix testimonial spacing

--- a/src/slices/Testimonials/styles.module.css
+++ b/src/slices/Testimonials/styles.module.css
@@ -80,6 +80,7 @@
    }
 
    .testimonial {
+      margin: 0 auto;
       max-width: 80%;
    }
 }
